add new content

--- a/src/content/guide/micro-tips/속성피해 조합.md
+++ b/src/content/guide/micro-tips/속성피해 조합.md
@@ -5,8 +5,7 @@ pubDate: 2026-01-11
 ---
 ### 미세먼지 그거
 #### 속성피해 조합 편
-
-이전에 속성피해에 대해서 설명을 해줬는데 워낙 긴글이기도 하고 해서 속성별 시너지랑 추천 조합을 간단하게 나열할거임
+##### 이전에 속성피해에 대해서 설명을 해줬는데 워낙 긴글이기도 하고 해서 속성별 시너지랑 추천 조합을 간단하게 나열할거임
 - 주로 조합속성위주임
 - 이유도 간단하게 적음
 - 아케인도 있는데 이것까지는 투머치고 없는 텐노도 많아서 굳이 안적음
