add new content

--- a/src/content/guide/basics/멀티샷.md
+++ b/src/content/guide/basics/멀티샷.md
@@ -12,7 +12,7 @@ pubDate: 2026-01-10
 ~~이녀석도 계산식이 있다 그래도 치명타보단 쉽다~~
  
 
-아래의 사진은 권총이 아주 사랑하는 모드인 배럴디퓨전과 리썰토렌트라는 멀티샷 모드임
+##### 아래 두 모드는 권총에 자주 쓰는 모드인 배럴디퓨전과 리썰토렌트라는 멀티샷 모드임
 
 <div style="display:flex; gap:16px; flex-wrap:wrap;">
   <img
@@ -30,17 +30,17 @@ pubDate: 2026-01-10
 각각 120%와 60%를 추가해줌
 
 계산식은  
+<span style="color:#9bbcff; font-style:italic;">
 총합 펠릿 수 = 무기 펠릿 수 × (1 + 멀티샷 수정치)
+</span>
 
 어려워 보이나?  
 권총모드이니 권총으로 예시를 든다
 
-대부분 워프레임 권총은 단발이다
-
+##### 대부분 워프레임 권총은 단발이다
 - 단발이니 무기의 펠릿수는 1
 
-단발인 권총에 위의 두 모드를 넣고 계산식을 쓰면
-
+단발인 권총에 위의 두 모드를 넣고 계산식을 쓰면  
 <span style="color:#9bbcff; font-style:italic;">
 = 1 X (1 + 1.2 + 0.6)<br />
 = 1 X (1 + 1.8)<br />
