--- a/src/content/guide/micro-tips/숙련도-1탄.md
+++ b/src/content/guide/micro-tips/숙련도-1탄.md
@@ -11,18 +11,20 @@ pubDate: '2026-01-10'
 
 각 상황별 배분 비율
 
-내가 워프레임 어빌로 잡았을 때: 내 워프레임에 100%
+##### 내가 워프레임 어빌로 잡았을 때: 내 워프레임에 100%
+<br />
 
-내가 무기로 잡았을 때: 내 워프레임에 50%, 내가 잡은 무기에 50%
+##### 내가 무기로 잡았을 때: 내 워프레임에 50%, 내가 잡은 무기에 50%
+<br />
 
-남이 잡았을 때: 내 워프레임에 25%, 내 무기들에 75%, 무기 갯수 따라 각각 n분의 1
+##### 남이 잡았을 때: 내 워프레임에 25%, 내 무기들에 75%, 무기 갯수 따라 각각 n분의 1
 - 무기를 1개만 장착했으면 75%가 1개에 몰빵
 - 무기를 2개만 장착했으면 37.5%, 37.5%
 - 무기를 3개 다 장착했으면 25%, 25%, 25%
 - 무기를 3개 다 장착했는데 아크윙 총을 중화기로 꺼냈을 경우 무기 4개로 인식되어서 18.75%, 18.75%, 18.75%, 18.75%
 
-깨알 팁: 워프레임을 빼고 갈수는 없다만 무기같은 경우는 숙련도작에 필요한 무기만 장착하는걸 권장함
+##### 깨알 팁: 워프레임을 빼고 갈수는 없다만 무기같은 경우는 숙련도작에 필요한 무기만 장착하는걸 권장함
 
-권장이라고 하는 이유는 너도 몹을 잡긴 해야하잖아? 타인에게 100퍼 의지하면 좋긴 하지만 눈치가 보이니 딜 나오는 무기 하나 즈음 들고가셈 숙련도작 하는 무기가 뎀지나오면 좋겠지만 노포르마 기준 깡 무기로는 모드수용량이 낮아서 제성능이 안나옴(예외는 있음)
+권장이라고 하는 이유는 너도 몹을 잡긴 해야하잖아? 타인에게 100% 의지하면 좋긴 하지만 눈치가 보이니 딜 나오는 무기 하나 즈음 들고가셈 숙련도작 하는 무기가 뎀지나오면 좋겠지만 노포르마 기준 깡 무기로는 모드수용량이 낮아서 제성능이 안나옴(예외는 있음)
 
 물론 내가 무기로 잡기전에 타인이 쓸어버리면 가만히 손가락 빨고 있으면 된다
