--- a/src/content/guide/micro-tips/포르마.md
+++ b/src/content/guide/micro-tips/포르마.md
@@ -6,7 +6,7 @@ pubDate: 2026-01-11
 ### 어쩌고 미세먼지 저쩌고...
 #### 포르마 편
 
-포르마는 4가지가 있음
+##### 포르마는 4가지가 있음
 - 포르마    
 - 옴니 포르마
 - 스탠스 포르마
@@ -22,12 +22,12 @@ pubDate: 2026-01-11
 - 주의 할 점으로는 얘 제작재료로 포르마 4개를 먹음...ㅋ
 
 #### 스탠스 포르마
-획득처: 테신(10 스틸 에센스), 스칼렛 스피어 이벤트 상점(5,000 스칼렛 크레딧)
+##### 획득처: 테신(10 스틸 에센스), 스칼렛 스피어 이벤트 상점(5,000 스칼렛 크레딧)
 - 근접 무기에만 사용 가능한 포르마 스탠스 포르마가 사용된 근접무기의 스탠스 모드 슬롯은 유니버셜 극성이 됨
 - 생각보다 잘 안씀
 
 #### 움브라 포르마
-획득처: 나이트웨이브(시즌당 1개), 테신(150 스틸 에센스, 8주마다 로테이션), 로터스의 선물 얼럿, 마스터리 랭크 30 도달(3개)
+##### 획득처: 나이트웨이브(시즌당 1개), 테신(150 스틸 에센스, 8주마다 로테이션), 로터스의 선물 얼럿, 마스터리 랭크 30 도달(3개)
 - 움브라 극성 하나만 추가할 수 있으며, 일반 포르마와 다르게 워프레임과 근접 무기에서만 움브랄 극성을 추가할 수 있음
 - 센티넬 무기 중에서는 헬리오스 전용 무기 디컨스트럭터가 근접 무기 분류라 사용할 수 있음 나이트웨이브의 25 ~ 30랭크 사이에서 완제품을 얻을 수 있고, 테신으로부터 스틸에센스를 지불해 설계도를 구매할 수 있음
 - 대신 획득 난이도가 워낙에 괴악하므로 신중하게 써야함
