--- a/src/content/guide/micro-tips/모드수용량.md
+++ b/src/content/guide/micro-tips/모드수용량.md
@@ -6,19 +6,19 @@ pubDate: 2026-01-11
 ### 알아두면 좋고 몰라도 되는 미세먼지 팁
 #### 모드수용량 편
 
-모딩이라고 하는 업그레이드는 기본 30을 제공한다
+##### 모딩이라고 하는 업그레이드는 기본 30을 제공한다
 - 일부 무기는 오버랭크라는 시스템으로 40까지 제공한다 (카탈리스트 채용시 80)
 - 워프레임과 무기의 랭크당 1, 리엑터나 카탈 장착하면 랭크당 2씩 늘어나서 최대 30 또는 60이 된다
 - 마스터리 랭크는 워프레임이나 무기의 0랭크 수용량을 마스터리 랭크만큼 늘려준다 (Ex. 마스터리 랭크가 10이면 워프레임이나 무기는 0랭크시 기본 10 제공 그후 워프레임이나 무기의 랭크가 10을 넘어가면 그 후 1 또는 2씩 증가)
 - 고로 마스터리 랭크 30인 텐노는 0랭크 장비도 30을 제공 받는다
 - 오버 랭크 무기 들은 레전더리 랭크로 넘어가면 같은 방식으로 늘어난다
 - 
-오로킨 리엑터나 카탈리스트를 사용하면 수용량이 두 배가 된다
+##### 오로킨 리엑터나 카탈리스트를 사용하면 수용량이 두 배가 된다
 - 월급 갖다 꼬라박고 플레로 완제 일시불로사면 리엑터나 카탈 꽂힌채로 받음 제조시간없는 것도 덤
 
 워프레임에 오라 모드나 근접무기의 스탠스 모드는 수용량을 추가해줌
 
-숙련도 최대치 달성한 워프레임이나 무기에포르마를 사용해서 극성을 추가하면 극성에 맞는 모드를 채용하면 절반의 수용량을 소모한다
+##### 숙련도 최대치 달성한 워프레임이나 무기에포르마를 사용해서 극성을 추가하면 극성에 맞는 모드를 채용하면 절반의 수용량을 소모한다
 - 15같은 홀수 수용량은 7.5같은 .5가 생기는데 이건 올림처리
 - 포르마를 사용하면 Re:제로부터 시작하는 숙련도 생활 이라서 다시 최대치 까지 찍어야 함
 - 포르마로 오라나 스탠스에 극성추가하면 해당 오라 모드나 스탠스 모드의 수용량의 두 배를 추가제공해 줌
