add new content

--- a/src/content/guide/basics/치명타.md
+++ b/src/content/guide/basics/치명타.md
@@ -1,7 +1,7 @@
 ---
-title: '치명타'
-description: 'Warframe 치명타'
-pubDate: '2026-01-10'
+title: 치명타
+description: 치명타에 관한 글
+pubDate: 2026-01-10
 ---
 
 ### 워프레임 피해유형에 대해 알려드립니다
