add new content

--- a/src/content/guide/basics/피해량.md
+++ b/src/content/guide/basics/피해량.md
@@ -24,6 +24,7 @@ pubDate: 2026-01-12
 이 되시겠다
 <br />
 <br />
+
 ##### 예시로 렉스 프라임을 보면
 <p>
   <img
@@ -43,7 +44,8 @@ pubDate: 2026-01-12
 
 ##### 물론 180의 데미지가 정직하게 들어가진 않음
 
-각 진영마다 약점 데미지도 있고 몹마다 방어력도 있어서 이것까지 계산 하려면 머리 터져 나가니 안다룰거임 나 수포자야
+각 진영마다 약점 데미지도 있고 몹마다 방어력도 있어서 이것까지 계산 하려면 머리 터져 나가니 안다룰거임  
+~~나 수포자야~~
 
 ##### 다른 예시로 내가 애용하는 토리드를 보면
 <p>
