add new content

--- a/src/content/guide/micro-tips/숙련도-2탄.md
+++ b/src/content/guide/micro-tips/숙련도-2탄.md
@@ -12,7 +12,7 @@ pubDate: 2026-01-11
 - 둘 다 없으면 에다방(에리스 다크 섹터 방어미션) 과거에 비해 인페스티드 숙련도 조정으로 너프먹었지만 여전히 활용 함
 - 저거도 없으면 무한미션 아무거나
 
-무한미션
+##### 무한미션
 
 탈출 하기 전까지 계속 몹이 나오는 미션을 의미함 몹이 계속 나와서 숙련도작에 매우 적합함
 
