--- a/src/content/guide/missions/디센디아.md
+++ b/src/content/guide/missions/디센디아.md
@@ -5,7 +5,7 @@ pubDate: 2026-01-12
 ---
 ### 디센디아
 #### 옛 평화가 나오면서 새로 추가된 미션
-특징으로는 한 층씩 하강하는 방식이고 각 층마다 미션이 다름
+##### 특징으로는 한 층씩 하강하는 방식이고 각 층마다 미션이 다름
 - 주간단위 갱신
 - 일단 내가 플레이 해보고 느낀점을 서술한것임
 - 우선 부활 불가에다가 현존 하는 미션들이 나옴 약간의 변화는 있음
