--- a/src/content/moding/weapons/란카-아이돌론.md
+++ b/src/content/moding/weapons/란카-아이돌론.md
@@ -3,7 +3,7 @@ title: 란카 [아이돌론]
 description: 란카 아이돌론 모딩 글
 pubDate: 2026-01-12
 ---
-### 상태이상의 1인자 루비코
+### 상태이상의 1인자 란카
 #### 얻기도 쉽고 저격총 중에 한방이 매우 강력함
 - 물리 피해없이 원소 속성인 자성만 붙어서 나오기에 모딩도 간편함
 - 배율도 3단계라 치확 상승폭이 높음 거기다가 이건 곱연산이 아닌 합연산임
