add new content

--- a/src/content/guide/basics/피해량.md
+++ b/src/content/guide/basics/피해량.md
@@ -5,6 +5,8 @@ pubDate: 2026-01-12
 ---
 ### 워프레임 피해유형에 대해 알려드립니다
 #### 피해량 편
+<br />
+
 ##### 워프레임에는 피해유형이 두가지다
 1. 대부분의 무기에 기본적으로 있는 물리속성피해
 2. 특정 무기에 추가로 있거나 모드로 추가가능한 원소속성피해
@@ -108,16 +110,17 @@ A. 사진으로 설명한다 -끝-
 </p>
 
 ##### 윗 사진처럼 총계 633짜리 셋팅이어도 준수한 성능임
-<p>
-  <img
-    src="/images/guide/torid-633-damage.png"
-    alt="토리드 633 데미지"
-    style="width:100%; max-width:800px; height:auto;"
-  />
-</p>
-
-~~주황크리라 보는 맛도 있음~~
-
+<div style="
+  display:flex;
+  gap:16px;
+  flex-wrap:wrap;
+">
+  <div>
+    <img src="/images/guide/torid-633-damage.png" style="max-width:800px; width:100%;" />
+    <div>주황크리라 보는 맛도 있음</div>
+  </div>
+ </div>
+<br />
 ##### 이게 무엇을 의미하냐?
 무조건 총계 = 데미지 가 아니란 거임  
 각 속성별 효과를 보고 조합 짜는게 좋음  
@@ -143,15 +146,17 @@ A. 사진으로 설명한다 -끝-
 </p>
 
 ##### 그러면 보이드를 뚫는 데미지를 보게 될 것이다
-<p>
-  <img
-    src="/images/guide/laetum-damage.png"
-    alt="레이텀 데미지"
-    style="width:100%; max-width:800px; height:auto;"
-  />
-</p>
-
-~~사진으로도 보이는 체력 닳는 속도~~
+<div style="
+  display:flex;
+  gap:16px;
+  flex-wrap:wrap;
+">
+  <div>
+    <img src="/images/guide/laetum-damage.png" style="max-width:800px; width:100%;" />
+    <div>사진으로도 보이는 체력 닳는 속도</div>
+  </div>
+ </div>
+<br />
 
 ##### 여튼 각 무기마다 고유한 특성?이 있음
 ##### 그에 걸맞는 모딩을 해주면 웬만한 몹들은 순삭임
