--- a/src/content/guide/micro-tips/속성피해 조합.md
+++ b/src/content/guide/micro-tips/속성피해 조합.md
@@ -5,43 +5,59 @@ pubDate: 2026-01-11
 ---
 ### 미세먼지 그거
 #### 속성피해 조합 편
+<br />
+
 ##### 이전에 속성피해에 대해서 설명을 해줬는데 워낙 긴글이기도 하고 해서 속성별 시너지랑 추천 조합을 간단하게 나열할거임
 - 주로 조합속성위주임
 - 이유도 간단하게 적음
 - 아케인도 있는데 이것까지는 투머치고 없는 텐노도 많아서 굳이 안적음
+<br />
+<br />
 
 ### 추천 조합
+<br />
 
 #### 전통의 바베기 (바이러스 + 베기)
 - 바이러스의 체력 추가데미지와 베기의 방어무시 체력데미지
 - 베기의 출혈데미지를 극한으로 늘려주는 조합
 - 바베기 메타는 막을 내렸지만 여전히 자주 쓰임
+<br />
+<br />
 
 #### 신흥강자 바불 (바이러스 + 화염)
 - 바이러스의 체력추뎀과 화염의 방어력 감소
 - 화염의 상태이상 데미지를 극한으로 늘려주는 조합
 - 바베기와 사용량 1~2위를 겨룸
+<br />
+<br />
 
 #### 방어구 벗기기 부불 (부식 + 화염)
 - 부식의 방어력 감소와  화염의 방어력 감소
 - 방감 + 방감 = 적들이 방어구 없는 수준으로 만듦
 - 방어구가 벗겨진 적들은 화염피해를 고대로 받음
+<br />
+<br />
 
 #### 광역 학살의 1인자 부폭 (부식 + 폭발)
 - 부식의 방어력 감소와 폭발의 범위데미지
 - 방어력이 낮아진 적에게 폭발의 범위피해가 들어가서 광역학살 특화임
 - 토리드가 주로 채용하는 조합
+<br />
+<br />
 
 #### 대 코퍼스 결전병기 자불 (자성 + 화염)
 - 자성의 실드 특화피해와 화염의 방어력 감소
 - 오버가드가 많은 적한테도 유용함
 - 단, 실드돼지들 말고는 못써먹음
+<br />
+<br />
 
 #### 범위피해끼리 만났다 폭전 (폭발 + 전기)
 - 폭발의 범위피해와 전기의 범위피해
 - 범위피해라 역시 물량전에 특화되어있음
 - 전기로 적들 감전시키고 폭파로 범위피해 주는 식이 대부분
+<br />
+<br />
 
 #### 이들이 주로 사용하는 조합임
-
-각자 입맛에 맞게 모딩을 해보도록 하자
+- 각자 입맛에 맞게 모딩을 해보도록 하자
