--- a/src/content/guide/micro-tips/숙련도-1탄.md
+++ b/src/content/guide/micro-tips/숙련도-1탄.md
@@ -6,10 +6,13 @@ pubDate: '2026-01-10'
 
 ### 알아두면 좋고 몰라도 되는 미세먼지 팁
 #### 숙련도 1편
+<br />
 
-우선 숙련도는 경험치 같은거라고 보면 됨
+##### 우선 숙련도는 경험치 같은거라고 보면 됨
+<br />
 
-각 상황별 배분 비율
+#### 각 상황별 배분 비율
+<br />
 
 ##### 내가 워프레임 어빌로 잡았을 때: 내 워프레임에 100%
 <br />
@@ -27,4 +30,4 @@ pubDate: '2026-01-10'
 
 권장이라고 하는 이유는 너도 몹을 잡긴 해야하잖아? 타인에게 100% 의지하면 좋긴 하지만 눈치가 보이니 딜 나오는 무기 하나 즈음 들고가셈 숙련도작 하는 무기가 뎀지나오면 좋겠지만 노포르마 기준 깡 무기로는 모드수용량이 낮아서 제성능이 안나옴(예외는 있음)
 
-물론 내가 무기로 잡기전에 타인이 쓸어버리면 가만히 손가락 빨고 있으면 된다
+##### 물론 내가 무기로 잡기전에 타인이 쓸어버리면 가만히 손가락 빨고 있으면 된다
