--- a/src/content/moding/warframes/네크로스-농부.md
+++ b/src/content/moding/warframes/네크로스-농부.md
@@ -7,8 +7,9 @@ updated:
 
 ### 네크로스 농부 모딩
 #### 자원 파밍할때 필수로 채용되는 녀석
+<br />
 
-얘가 있고 없고는 자원 파밍의 궤를 달리함
+##### 얘가 있고 없고는 자원 파밍의 궤를 달리함
 
 <p>
   <img
@@ -18,5 +19,5 @@ updated:
   />
 </p>
 
-핵심은 개조모드인 디스포일
-극 거리 셋팅하고 체력 몰빵 하면 된다
+##### 핵심은 개조모드인 디스포일
+- 극 거리 셋팅하고 체력 몰빵 하면 된다
