--- a/src/content/moding/warframes/볼트-아이돌론.md
+++ b/src/content/moding/warframes/볼트-아이돌론.md
@@ -7,7 +7,9 @@ pubDate: 2026-01-12
 ### 대 아이돌론 결전병기 볼트
 
 #### 사실 얘의 진가는 여기서 나옴
-아이돌론 솔로잉 스피드런도 가능한데 문제는 손이 많이 탐
+<br />
+
+##### 아이돌론 솔로잉 스피드런도 가능한데 문제는 손이 많이 탐
 
 <p>
   <img
@@ -20,6 +22,8 @@ pubDate: 2026-01-12
 ##### 핵심은 3번 어빌리티인 실드를 3개 겹쳐서 주무기의 뎀지를 증폭하는거
 - 1번 개조모드로 모든 공격에 100%의 전기 피해를 추가해주는건 덤
 - 그러니 솔로잉 스피드런이 가능한거
+<br />
+<br />
 
 ##### 가능하다고 했지 쉽다고는 안함
 - 트리니티로 루어 체력관리를 하는게 정석인데
