--- a/src/content/moding/warframes/트리니티-아이돌론.md
+++ b/src/content/moding/warframes/트리니티-아이돌론.md
@@ -7,7 +7,9 @@ pubDate: 2026-01-12
 ### 루어의 체력은 내가 담당한다 트리니티
 
 #### 얘가 있고 없고가 아이돌론 레이드의 난이도를 조절함
-초보에겐 트리니티를 강력 추천
+<br />
+
+##### 초보에겐 트리니티를 강력 추천
 
 <p>
   <img
@@ -20,6 +22,8 @@ pubDate: 2026-01-12
 ##### 핵심은 4번 어빌리티로 루어 체력이 닳으면 써주면 됨
 - 75% 피해 감소도 덤
 - 헬민드로 볼트 1번 집어 넣고 개조모드로 주무기 데미지 올려도 됨
+<br />
+<br />
 
 ##### 솔로잉도 가능한 다재다능한 녀석임
 - 플레이에 익숙해 지면 얘 하나 들고 혼자 3쿵이 클리어 하게 됨
