--- a/src/content/moding/weapons/나타루크-아이돌론.md
+++ b/src/content/moding/weapons/나타루크-아이돌론.md
@@ -4,8 +4,10 @@ description: 나타루크 아이돌론 모딩 글
 pubDate: 2026-01-12
 ---
 ### 활쟁이들을 위한 나타루크
-#### 아마 활중에는 유일하게 3쿵이에 쓸만한 무기임
-- 새로운 전쟁 퀘스트를 클리어하면 던져주는 무기임
+#### 아마 활중에는 유일하게 3쿵이에 쓸만한 무기일거임
+<br />
+
+##### 새로운 전쟁 퀘스트를 클리어하면 던져주는 무기임
 - 포르마도 2개가 끝
 - 화살이 직선으로 올곧게 날아감
 - 사격방식이 3가지임 일반, 차징, 정합
