--- a/src/content/guide/micro-tips/숙련도-2탄.md
+++ b/src/content/guide/micro-tips/숙련도-2탄.md
@@ -5,16 +5,21 @@ pubDate: 2026-01-11
 ---
 ### 미세먼지 그거
 #### 숙련도 2편
+<br />
 
 ##### 숙련도작 하기 좋은 미션은 당연히 존재함
 - 강철의 길 기준 목성 생존
 - 강철의 길은 없지만 맹습이 열려있으면 맹습
 - 둘 다 없으면 에다방(에리스 다크 섹터 방어미션) 과거에 비해 인페스티드 숙련도 조정으로 너프먹었지만 여전히 활용 함
 - 저거도 없으면 무한미션 아무거나
+<br />
+<br />
 
 ##### 무한미션
 
 탈출 하기 전까지 계속 몹이 나오는 미션을 의미함 몹이 계속 나와서 숙련도작에 매우 적합함
+<br />
+<br />
 
 ##### 종류는 다음과 같음
 - 생존 (쿠바, 회합, 헬스크럽 / 가장 많이 사랑받는 미션)
@@ -27,10 +32,14 @@ pubDate: 2026-01-11
 - 연금술
 - 인페스티드 인양
 - 보이드 범람, 홍수, 대격전
+<br />
+<br />
 
 ##### 특수미션은 다음과 같음
 - 다크 섹터 노드 전부 다
 - 생츄어리 맹습
 - 중재 (난이도 극악)
+<br />
+<br />
 
-중재는 [여기 참고](/guide/missions/중재-강철의-길)
+#### 중재는 [여기 참고](/guide/missions/중재-강철의-길)
