add new content

--- a/src/content/guide/missions/아이돌론-레이드.md
+++ b/src/content/guide/missions/아이돌론-레이드.md
@@ -175,6 +175,6 @@ A. 워프레임도 추천받아야지?
 
 #### 각각의 모딩은 아래 참고
 
-[단테](/moding/warframes/단테-아이돌론) / [볼트](/moding/warframes/볼트-아이돌론) / [크로마](/moding/warframes/크로마-아이돌론) / [트리니티](/moding/warframes/트리니티-아이돌론) / [해로우](/moding/warframes/해로우-아이돌론)
+[단테](단테-만능-모딩.md) / [볼트](/moding/warframes/볼트-아이돌론) / [크로마](/moding/warframes/크로마-아이돌론) / [트리니티](/moding/warframes/트리니티-아이돌론) / [해로우](/moding/warframes/해로우-아이돌론)
 
 [나타루크](/moding/weapons/나타루크-아이돌론) / [란카](/moding/weapons/란카-아이돌론) / [루비코 프라임](/moding/weapons/루비코-프라임-아이돌론) / [페리게일](/moding/weapons/페리게일-아이돌론)
