add new content

--- a/src/content/moding/warframes/단테-만능-모딩.md
+++ b/src/content/moding/warframes/단테-만능-모딩.md
@@ -1,7 +1,6 @@
 ---
 title: 단테 [만능 모딩]
-description:
-  - 단테 모딩 글
+description: 단테 모딩 글
 pubDate: 2026-01-12
 ---
 ### 모든 길은 나를 통한다 단테
@@ -21,6 +20,6 @@ pubDate: 2026-01-12
 ##### 저게 만능모딩이라 저거 하나로 모든 종류의 미션이 가능함
 <br />
 
-아이돌론 레이드도 가능능
+아이돌론 레이드도 가능
 - 오버가드는 자성 패턴을 파훼함
 - 그리고 오버가드는 루어에도 적용이 됨
