add new content

--- a/src/content/moding/warframes/단테-만능-모딩.md
+++ b/src/content/moding/warframes/단테-만능-모딩.md
@@ -11,15 +11,27 @@ pubDate: 2026-01-12
 ##### 진짜 다재다능한 애
 <p>
   <img
-    src="/images/moding/dante-eidolon-build.png"
-    alt="단테 아이돌론"
+    src="/images/moding/dante-all-build.png"
+    alt="단테 만능 모딩"
     style="width:100%; max-width:800px; height:auto;"
   />
 </p>
 
 ##### 저게 만능모딩이라 저거 하나로 모든 종류의 미션이 가능함
 <br />
+<p>
+  <img
+    src="/images/moding/dante-noctua-build.png"
+    alt="단테 녹투아 모딩"
+    style="width:100%; max-width:800px; height:auto;"
+  />
+</p>
 
-아이돌론 레이드도 가능
+##### 녹투아는 이렇게 모딩하면 됨
+- 서책 모드가 없으면 속성모드나 치명모딩을 추가하면 됨
+<br />
+<br />
+
+##### 아이돌론 레이드도 가능
 - 오버가드는 자성 패턴을 파훼함
 - 그리고 오버가드는 루어에도 적용이 됨
